  * Add packages for okteta:
    - okteta
    - okteta-dev
    - libkastencontrollers4
    - libkastencore4
    - libkastengui4
    - liboktetacore4
    - liboktetagui4
    - liboktetakastencontrollers4
    - liboktetakastencore4
    - liboktetakastengui4
  * Bump kde-sc-dev-latest build dependency to 4:4.6.1.
  * Bump pkg-kde-tools build dependency to 0.12.
  * Bump S-V to 3.9.1; update Replaces/Breaks/Conflicts.
  * Add myself to Uploaders.
  
  [ Pino Toscano ]
  * Add build dependency on libqca2-dev.
  * Do not ship kdesrc-build with kdesdk-scripts, it will be packaged
    separately.

 -- José Manuel Santamaría Lema <panfaust@gmail.com>  Thu, 31 Mar 2011 17:24:50 +0000

kdesdk (4:4.4.5-1) unstable; urgency=low

  [ Modestas Vainius ]
  * New upstream release.
  * Bump kde-sc-dev-latest build dependency to 4:4.4.5.

  [ Sune Vuorela ]
  * Update email address
  * Update descriptions

 -- Sune Vuorela <sune@debian.org>  Sun, 18 Jul 2010 10:40:07 +0200

kdesdk (4:4.4.4-1) unstable; urgency=low

  * New upstream release.

  [ Modestas Vainius ]
  * Bump pkg-kde-tools build dependency to (>= 0.9) for HTML_INSTALL_DIR
    switch and 3.0 (quilt) source format support.
  * Switch to 3.0 (quilt) source package format and original tar.bz2
    tarballs.
  * Replace usr/share/doc/kde4 references with usr/share/doc/kde.
  * Drop quilt from Build-Depends, no longer needed for 3.0 (quilt).
  * Remove debian/README.source. Patch support is part of source format
    now.
  * Move debian/source.lintian-overrides to debian/source/lintian-overrides.
  * Bump kde-sc-dev-latest build dependency to 4:4.4.4.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 01 Jun 2010 01:15:19 +0300

kdesdk (4:4.4.3-1) unstable; urgency=low

  * New upstream release.

  [ Ferdinand Thommes ]
  * fixed copyright file

  [ Modestas Vainius ]
  * Bump kde-sc-dev-latest build dependency to 4.4.3.
  * Release KDE SC 4.4.3 to unstable.
