@@ -40,6 +40,8 @@ kdesdk (4:4.6.1-0r0) UNRELEASED; urgency=low
     - liboktetakastengui4
   * Bump kde-sc-dev-latest build dependency to 4:4.6.1.
   * Bump pkg-kde-tools build dependency to 0.12.
+  * Switch debian/rules engine to dhmk based qt-kde-team/2/*
+    - and remove cdbs from Build-Depends.
   * Bump S-V to 3.9.1; update Replaces/Breaks/Conflicts.
   * Add myself to Uploaders.
   
